# InTheZone_AI_Cpp

./: .gitignore  CMakeLists.txt  ConePipeline.cpp  ConePipeline.h  main.cpp
GRIP files/: blue mobile goal filter.grip  cone filter.grip  number filter.grip  red mobile goal filter.grip
neat/: experiments.cpp  experiments.h  neatmain.cpp
src/: HeapScanner.cpp  HeapScanner.h  MatrixRepresentation.cpp  MatrixRepresentation.h  guiHelper.h  heapScanner.h  main.cpp  vJoy.h
src/grip/: BlueMobileGoalPipeline.cpp  BlueMobileGoalPipeline.h  ConePipeline.cpp  ConePipeline.h  RedMobileGoalPipeline.cpp  RedMobileGoalPipeline.h
vJoy_SDK/inc/: public.h  vjoyinterface.h
